# BE-Major-Project

./: .gitignore  README.md  centralized_secure_store.py  client.py  create_dp_comparison.py  decrypt.py  decrypt_secure_store.py  device_key.pem  dp_comparison_all_modes.csv  dp_noise_mechanism_comparison_base.csv  dp_noise_mechanism_comparison_full.csv  dp_noise_mechanism_comparison_rag.csv  dp_noise_mechanism_comparison_vector_rag.csv  format_daic_to_lda.py  plot_dp_comparison.py  regenerate_proto.py  requirements.lock.txt  standalone_trainer_mentalbert_privacy.py  wave2vec.py
LDA/: decrypt.py  requirements.txt
client_agent/: client_agent.py
configs/: local_config.yaml
decrypt_agent/: decrypt_demo.py
dp_agent/: dp_agent.py  run_demo_single_process.py  watcher.py
enc_agent/: enc_agent.py  run_demo_single_process.py  watcher.py
explain_logs/: base_probe_explain_1768361319465.txt  exponential_0.0_explain_1760596932174.txt  exponential_0.0_explain_1760596933479.txt  exponential_0.0_explain_1760596934398.txt  exponential_0.5_explain_1760596932176.txt  exponential_0.5_explain_1760596933481.txt  exponential_0.5_explain_1760596934400.txt  exponential_1.0_explain_1760596932179.txt  exponential_1.0_explain_1760596933483.txt  exponential_1.0_explain_1760596934402.txt  exponential_1.5_explain_1760596932181.txt  exponential_1.5_explain_1760596933485.txt  exponential_1.5_explain_1760596934404.txt  exponential_2.0_explain_1760596932183.txt  exponential_2.0_explain_1760596933487.txt  exponential_2.0_explain_1760596934406.txt  gaussian_0.0_explain_1760596932143.txt  gaussian_0.0_explain_1760596933448.txt  gaussian_0.0_explain_1760596934369.txt  gaussian_0.5_explain_1760596932145.txt  gaussian_0.5_explain_1760596933450.txt  gaussian_0.5_explain_1760596934371.txt  gaussian_1.0_explain_1760596932147.txt  gaussian_1.0_explain_1760596933452.txt  gaussian_1.0_explain_1760596934373.txt  gaussian_1.5_explain_1760596932149.txt  gaussian_1.5_explain_1760596933454.txt  gaussian_1.5_explain_1760596934374.txt  gaussian_2.0_explain_1760596932151.txt  gaussian_2.0_explain_1760596933457.txt  gaussian_2.0_explain_1760596934376.txt  laplace_0.0_explain_1760596932153.txt  laplace_0.0_explain_1760596933459.txt  laplace_0.0_explain_1760596934378.txt  laplace_0.5_explain_1760596932155.txt  laplace_0.5_explain_1760596933461.txt  laplace_0.5_explain_1760596934380.txt  laplace_1.0_explain_1760596932157.txt  laplace_1.0_explain_1760596933463.txt  laplace_1.0_explain_1760596934382.txt  (+52 more)
server/orchestration_agent/: Cargo.toml  build.rs
server/orchestration_agent/certs/: ca.key  ca.pem  ca.srl  server.csr  server.ext  server.key  server.pem
server/orchestration_agent/config/: orchestrator.toml
server/orchestration_agent/proto/: orchestrator.proto
server/orchestration_agent/src/: config.rs  crypto.rs  errors.rs  identity.rs  ledger.rs  main.rs  otp.rs  pubsub.rs  receipts.rs  round.rs  state.rs
server/orchestration_agent/src/grpc/: mod.rs  server.rs
(+119 files in other folders)
