[package]
name = "orchestrator"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["pem"] }
pkcs8 = "0.10"
bytes = "1.6"
uuid = { version = "1.8", features = ["v4"] }
rcgen = "0.13"
anyhow = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
tempfile = "3"
once_cell = "1"
rand = "0.8"
hex = "0.4"
# FIX: explicitly declared so receipts.rs can parse PEM-encoded public keys.
# base64 0.21 was already a transitive dependency (via tonic) — this just
# makes it explicit so the Engine API is available in our own code.
base64 = "0.21"

[build-dependencies]
tonic-build = "0.11"