[package]
name = "orchestrator"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
sha2 = "0.10"
hmac = "0.12"          # FIX: added for receipt HMAC chaining
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["pem"] }
pkcs8 = "0.10"
bytes = "1.6"
uuid = { version = "1.8", features = ["v4"] }
rcgen = "0.13"
anyhow = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
tempfile = "3"
once_cell = "1"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
futures = "0.3"         # FIX: added for StreamExt in upload handler

# FIX: MongoDB driver for receipts and model weight storage
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.10", features = ["chrono-0_4"] }

[build-dependencies]
tonic-build = "0.11"